# datastore

./: .env.example  .gitignore  .python-version  API.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
datastore/: main.py
datastore/api/: auth.py  context.py  error_handlers.py  middleware.py  responses.py  routes.py
datastore/auth/: __init__.py  base.py  registry.py
datastore/core/: config.py  constants.py  exceptions.py  helper.py
datastore/infrastructure/: cache.py  ckan_client.py
datastore/schemas/: datastore.py  request.py  responses.py  validators.py
datastore/services/: dump.py  read.py  streaming.py  write.py
example_payload/: README.md
example_payload/datastore_create/: with_resource.json  with_resource_id.json  with_schema.json
example_payload/datastore_delete/: force_readonly.json  with_fields.json  with_filters.json
example_payload/datastore_info/: basic.json  with_id_alias.json
example_payload/datastore_search/: basic.json  paginated_sorted.json  response.json  with_filters.json  with_full_text.json
example_payload/datastore_search_sql/: basic.json  (+5 more)
postman/: README.md  collection.json  generate_postman.py
tests/: conftest.py  test_api.py  test_bigquery_metadata.py  test_bigquery_tables.py  test_datastore_create.py  test_datastore_delete.py  test_datastore_dump.py  test_datastore_info.py  test_datastore_search.py  test_datastore_search_sql.py  test_datastore_upsert.py  test_health.py  test_read_service.py  test_streaming.py  test_write_service.py
(+37 files in other folders)
