[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datastore"
version = "0.1.0"
description = "CKAN-compatible datastore API with pluggable storage backends"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi[standard]>=0.115,<0.116",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3",
    "orjson>=3.10",
    "google-cloud-bigquery>=3.25",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "frictionless>=5.18",
    "uvloop>=0.21",
    "httptools>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["datastore"]

[tool.ruff]
src = ["datastore"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
packages = ["datastore"]

[[tool.mypy.overrides]]
module = "frictionless.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.cloud.bigquery.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:ckan -p no:ckan_fixtures"
markers = [
    "unit: fast tests with no I/O",
    "integration: tests that require real services",
]
filterwarnings = [
    "ignore::PendingDeprecationWarning:starlette.formparsers",
]
